@@ -12,9 +12,10 @@ class ${1:ClassName} ${3:extends AnotherClass}
 	#	internal variables
 	
 	#	Constructor
-	function __construct ( ${4:argument} )
+	function __construct (${4:argument})
 	{
-		${0:# code...}
+		# code...
+		$0
 	}
 	###	
 
@@ -31,16 +32,17 @@ class ${1:ClassName} ${3:extends AnotherClass}
   <snippet id="do">
     <text><![CDATA[do
 {
-	${0:# code...}
-	
-} while ( ${1:$a <= 10} );]]></text>
+	# code...
+	$0
+} while (${1:$a <= 10});]]></text>
     <description>do .. while ..</description>
     <tag>do</tag>
   </snippet>
   <snippet id="elseif">
-    <text><![CDATA[elseif ( ${1:condition} )
+    <text><![CDATA[elseif (${1:condition})
 {
-	${0:# code...}
+	# code...
+	$0
 }]]></text>
     <description>elseif ..</description>
     <tag>elseif</tag>
@@ -48,7 +50,8 @@ class ${1:ClassName} ${3:extends AnotherClass}
   <snippet id="else">
     <text><![CDATA[else
 {
-	${0:# code...}
+	# code...
+	$0
 }]]></text>
     <description>else ..</description>
     <tag>else</tag>
@@ -64,23 +67,25 @@ class ${1:ClassName} ${3:extends AnotherClass}
     <tag>$</tag>
   </snippet>
   <snippet id="foreach">
-    <text><![CDATA[foreach( $${1:variable} as $${2:key} => $${3:value} )
+    <text><![CDATA[foreach ($${1:variable} as $${2:key} => $${3:value})
 {
-	${0:# code...}
+	# code...
+	$0:
 }]]></text>
     <description>foreach ..</description>
     <tag>foreach</tag>
   </snippet>
   <snippet id="for">
-    <text><![CDATA[for ( $${1:i}=${2:0}; $${1:i} < $3; $${1:i}++ )
-{ 
-	${0:# code...}
+    <text><![CDATA[for ($${1:i} = ${2:0}; $${1:i} < $3; $${1:i}++)
+{
+	# code...
+	$0
 }]]></text>
     <description>for ..</description>
     <tag>for</tag>
   </snippet>
   <snippet id="function">
-    <text><![CDATA[${1:public }function ${2:FunctionName} (${3: $${4:value}${5:=''} })
+    <text><![CDATA[${1:public }function ${2:FunctionName}($3)
 {
 	${0:# code...}
 }]]></text>
@@ -93,17 +98,17 @@ class ${1:ClassName} ${3:extends AnotherClass}
     <tag>$</tag>
   </snippet>
   <snippet id="globals">
-    <text><![CDATA[$GLOBALS['${1:variable}']${2: = }${3:something}${4:;}$0]]></text>
+    <text><![CDATA[\$GLOBALS['${1:variable}']${2: =} ${3:something} ${4:;}]]></text>
     <description>$GLOBALS['..']</description>
     <tag>globals</tag>
   </snippet>
   <snippet id="if?">
-    <text><![CDATA[$${1:retVal} = ( ${2:condition} ) ? ${3:a} : ${4:b} ;]]></text>
+    <text><![CDATA[$${1:retVal} = (${2:condition}) ? ${3:a} : ${4:b};]]></text>
     <description>$.. =</description>
     <tag>iff</tag>
   </snippet>
   <snippet id="ifelse">
-    <text><![CDATA[if ( ${1:condition} )
+    <text><![CDATA[if (${1:condition})
 {
 	${2:# code...}
 }
@@ -116,25 +121,26 @@ $0]]></text>
     <tag>ifelse</tag>
   </snippet>
   <snippet id="if">
-    <text><![CDATA[if ( ${1:condition} )
+    <text><![CDATA[if (${1:condition})
 {
-	${0:# code...}
+	# code...
+	$0
 }]]></text>
     <description>if ..</description>
     <tag>if</tag>
   </snippet>
   <snippet id="incl1">
-    <text><![CDATA[include_once( '${1:file}' );$0]]></text>
+    <text><![CDATA[include_once('${1:file}');$0]]></text>
     <description>include_once</description>
     <tag>inclo</tag>
   </snippet>
   <snippet id="incl">
-    <text><![CDATA[include( '${1:file}' );$0]]></text>
+    <text><![CDATA[include('${1:file}');$0]]></text>
     <description>include</description>
     <tag>incl</tag>
   </snippet>
   <snippet id="array">
-    <text><![CDATA[$${1:arrayName} = array( '$2'${3:,} );$0]]></text>
+    <text><![CDATA[$${1:arrayName} = array('$2'${3:,});]]></text>
     <description>$.. = array</description>
     <tag>array</tag>
   </snippet>
@@ -153,7 +159,7 @@ $0]]></text>
     <tag>$</tag>
   </snippet>
   <snippet id="print">
-    <text><![CDATA[print "${1:string}"${2: . };$0]]></text>
+    <text><![CDATA[print "${1:string}"${2: . };]]></text>
     <description>print ".."</description>
     <tag>print</tag>
   </snippet>
@@ -163,12 +169,12 @@ $0]]></text>
     <tag>$</tag>
   </snippet>
   <snippet id="req1">
-    <text><![CDATA[require_once( '${1:file}' );$0]]></text>
+    <text><![CDATA[require_once('${1:file}');]]></text>
     <description>require_once</description>
     <tag>reqo</tag>
   </snippet>
   <snippet id="req">
-    <text><![CDATA[require( '${1:file}' );$0]]></text>
+    <text><![CDATA[require('${1:file}');]]></text>
     <description>require</description>
     <tag>req</tag>
   </snippet>
@@ -184,13 +190,14 @@ $0]]></text>
   </snippet>
   <snippet id="case">
     <text><![CDATA[case '${1:variable}':
-	${0:# code...}
+	# code...
+	$0
 break;]]></text>
     <description>case ..</description>
     <tag>case</tag>
   </snippet>
   <snippet id="switch">
-    <text><![CDATA[switch ( ${1:variable} )
+    <text><![CDATA[switch (${1:variable})
 {
 	case '${2:value}':
 		${3:# code...}
@@ -206,9 +213,10 @@ break;]]></text>
     <tag>switch</tag>
   </snippet>
   <snippet id="while">
-    <text><![CDATA[while ( ${1:$a <= 10} )
+    <text><![CDATA[while (${1:$a <= 10})
 {
-	${0:# code...}
+	# code...
+	$0
 }]]></text>
     <description>while ..</description>
     <tag>while</tag>
